# FileLauncher

./: .gitignore  LICENSE  README.md  check_repo.py  cli.py  layout.py  netman_cli.py  pyproject.toml  recieve.py  requirements.txt  transfer.py  update.py
.github/workflows/: filelauncher.yml  old-pytest-script.yml  publish-to-test-pypi.yml  python-app.yml  revised-default-workflow.yml  test-app.yml  test-gui-app.yml
src/: error_log.txt  errors.py  main.py  prompt.py  test_main.py  updates.py
src/FileLauncher_Redfourk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/command_line/: app-terminal.py  layout.py  layout.tcss  listen.py  send.py  test.txt
src/gui/: FLapp.bat  gui.pyw  netman.py
src/gui/uploads/: test_transfer.txt
src/updates/: check_repo.py  update_libs.ps1
